--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "lakshmaji9@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {},
 
     "autoload": {
@@ -18,8 +18,5 @@
                     "lakshmajim\\plivo\\": "src/"
         }
     }
-
-
-    
-
 }
+
